# 3rd-Window

./: .env.example  .gitattributes  .gitignore  ACTIVITY_WIDGET_COMPLETE.md  ARCHITECTURE.md  DISCORD-IMPLEMENTATION.md  DISCORD_AUTH_FIXED.md  DISCORD_CREDENTIALS_SECURITY.md  DISCORD_LOCALHOST_REDIRECT.md  DISCORD_OAUTH_AUTOMATIC.md  DISCORD_OAUTH_COMPLETE.md  DISCORD_OAUTH_QUICK_REF.md  DISCORD_OAUTH_SETUP.md  OAUTH_STUCK_FIX.md  PROGRESS.md  QUICK_FIX_NULL_REDIRECT.md  README.md  SECURE_STORAGE_COMPLETE.md  START-HERE.md  TEST_INSTRUCTIONS.md  TODO.md  WIDGET_FIXES_SUMMARY.md  check-registry.ps1  electron-builder.yml  index.html  package-lock.json  package.json  sonar-project.properties  temp_block.txt  test-context-menu.ps1  test-deeplink.ps1  tmp  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.css  (+9 more)
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context_menu.rs  discord.rs  discord_commands.rs  error.rs  ipc_types.rs  layout.rs  lib.rs  metrics.rs  monitors.rs  network.rs  secure_storage.rs  sensors.rs  settings.rs  system.rs  tray.rs  uninstaller.rs  validation.rs  widget_windows.rs  window_controls.rs  window_tracker.rs
src-tauri/src/commands/: context_menu.rs  desktop_widgets.rs  metrics.rs  mod.rs  monitors.rs  network.rs  persistence.rs  sensors.rs  settings.rs  widget_actions.rs  windows.rs  windows_integration.rs  windows_temp.rs
src-tauri/src/persistence/: compatibility.rs  migrations.rs  mod.rs  recovery.rs  schemas.rs  storage.rs
src-tauri/wix/: main.wxs  uninstall-cleanup.bat
(+505 files in other folders)
